moved dark mode to fixed bottom, changed routing structure

--- a/ui/src/css/Header.css
+++ b/ui/src/css/Header.css
@@ -3,3 +3,10 @@
 	justify-content: space-between;
 	align-items: center;
 }
+
+.bottom-div {
+	position: absolute;
+	bottom: 1%;
+	right: 2%;
+	width: 100%;
+}
